--- a/homepage.html
+++ b/homepage.html
@@ -8,8 +8,8 @@
 <body>
     <fragment>
         <div class="header">
-            <h1>Trellio.</h1>
-            <h3>MEET . CONNECT . COLLABORATE</h3>
+            <h2>Trellio.</h2>
+            <h3>MEET . CONNECT . COLLABORATE .  GROW</h3>
         </div>
         <div class="navbar">
             <a href="#about_page">ABOUT</a>
@@ -25,6 +25,7 @@
             <span class="buttons">
             <button class="button" style="vertical-align:middle"><span>REGISTER</span></button>
             <button class="button" style="vertical-align:middle"><span>LOGIN</span></button>
+            <button class="button" style="vertical-align:middle"><span>LEARN MORE</span></button> 
             </span>  
         </div>
         <hr>
